# vscode-lambda-calc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  wasm.txt
src/: extension.ts  lib.rs
