[package]
name = "vscode-lambda-calc"
version = "0.1.0"
authors = ["Adrian Leonhard <adrianleonhard@gmail.com>"]
edition = "2018"
description = ""
repository = "none"
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"